--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Buzz & miel</h1>
-								<p>moins de stress, plus de miel </p>
+								<h1>La Banane</h1>
+								<p></p>
 							</div>
 						</div>
 						<nav>
