Changement du menu

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Histoire</a></li>
-								<li><a href="#work">Notre travail</a></li>
-								<li><a href="#about">Nos valeurs</a></li>
+								<li><a href="#work">commercial</a></li>
+								<li><a href="#about">dans quel pays </a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
