--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Histoire</h2>
 								<span class="image main"><img src="images/elena-pollen-VKMwe5DZ3wU-unsplash.jpg" alt="" /></span>
-								<p>Buzz et Miel est notre aventure apicole née d'une passion pour les abeilles et le bon miel. Tout a commencé dans notre jardin, avec une petite ruche. Aujourd'hui, nous avons développé notre exploitation en nous engageant à offrir des miels artisanaux tout en préservant la biodiversité. Rejoignez-nous et savourez le fruit de notre travail ! 🍯🐝</a>.</p>
+								<p>La Banane pousse dans un bananier/a>.</p>
 								
 							</article>
 
